[package]
name = "apriori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "apriori"
crate-type = ["cdylib"]

[dependencies]
bitvec = "1.0"
itertools = "0.12"
rayon = "1.8"

[dev-dependencies]
maplit = "1.0.2"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]
